--- a/customers.html
+++ b/customers.html
@@ -36,7 +36,7 @@
     <!-- navbar ends here  -->
 
     <div class="my-info text-center"> 
-        <h2>Chitransh Agrawal</h2>
+        <h2>Rishav Kumar</h2>
         <h4>Bank Balance: ₹<span id="myAccountBalance">100000</span></h4>
 
         <button class="btn btn-info" data-toggle="modal" data-target="#sendMoney">Send Money</button>
