--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="row text-center">
         <div class="col-md-12 text-center" id="Contact-Us">
           <h1 class="heading">Contact Us:</h1>
-          <p>Email id.- chitransh@sparkbank.in</p>
+          <p>Email id.- rishav_kumar@sparkbank.in</p>
             <ul class="social-icons">
               
               <li><a target="_blank" class="github" ><i class="fab fa-github fa-2x"></i></a></li>
